--- a/app/assets/stylesheets/prospects.scss
+++ b/app/assets/stylesheets/prospects.scss
@@ -1,7 +1,7 @@
 .banner {
 	height: 400px;
 	width: 100%;
-	background: url("rocket.png") no-repeat center center;
+	background: image-url("rocket.png") no-repeat center center;
 	-webkit-background-size: cover; /* For WebKit*/
   -moz-background-size: cover;    /* Mozilla*/
   -o-background-size: cover;      /* Opera*/
